--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107213837">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221107214705">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -553,7 +553,7 @@
 				<div class="feedback__container">
 					<div class="reviews__title title">Оставить заявку</div>
 					<div class="feedback__inputs">
-						<form data-dev data-ajax method="POST" action="#" class="form">
+						<form data-dev class="form" action="#">
 							<div class="feedback__item">
 								<input placeholder="Ваше имя" data-validate="" data-error="Поле осталось не заполенным" data-required id="feedbackName" type="text" name="name" class="feedback__input req">
 							</div>
@@ -605,7 +605,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107213837"></script>
+	<script src="js/app.min.js?_v=20221107214705"></script>
 </body>
 
 </html>
