--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107214705">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221107220452">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -555,13 +555,13 @@
 					<div class="feedback__inputs">
 						<form data-dev class="form" action="#">
 							<div class="feedback__item">
-								<input placeholder="Ваше имя" data-validate="" data-error="Поле осталось не заполенным" data-required id="feedbackName" type="text" name="name" class="feedback__input req">
+								<input placeholder="Ваше имя" data-validate="" data-error="Поле осталось незаполненным" data-required id="feedbackName" type="text" name="name" class="feedback__input req">
 							</div>
 							<div class="feedback__item">
-								<input placeholder="+7 (977) 777-77-77" data-validate="" data-error="Вы забыли ввести свой номер" data-required id="feedbackTel" type="tel" name="tel" class="feedback__input req">
+								<input placeholder="+7 (977) 777-77-77" data-validate="" data-error="Вы забыли ввести свой номер" data-required id="feedbackTel" type="tel" name="tel" class="feedback__input req tel">
 							</div>
 							<div class="feedback__item">
-								<input placeholder="Email" data-validate="" data-error="Введен некорректный Email" data-required="email" id="feedbackEmail" type="email" name="Tel" class="feedback__input req">
+								<input placeholder="Email" data-validate="" data-error="Введен некорректный Email" data-required="email" id="feedbackEmail" type="email" name="" class="feedback__input req">
 							</div>
 							<div class="feedback__item">
 								<textarea placeholder="Ваш комментарий" id="feedbackText" type="text" name="Text" class="feedback__input req comment  "></textarea>
@@ -605,7 +605,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107214705"></script>
+	<script src="js/app.min.js?_v=20221107220452"></script>
 </body>
 
 </html>
