--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107220452">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221120134845">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -126,7 +126,7 @@
 						</div>
 					</div>
 
-					<div class="swiper-pagination"></div>
+
 
 
 				</div>
@@ -605,7 +605,8 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107220452"></script>
+	<script src="js/app.min.js?_v=20221120134845"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221120134845"></script>
 </body>
 
 </html>
